- Scrub the server version out of the HTTP response headers. [Rotonen]
- Fix bug in excerpt overview when user has no permissions on meeting. [njohner]
- Avoid naming conflicts in meeting zipexport. [njohner]
- Fix bug in meeting zip export with documents without files. [njohner]
- Do not show closed dossiers in the move target autocomplete widget. [Rotonen]
- Change wording of info for inactiv close meeting button. [njohner]
- Avoid truncating committee responsible group token while normalizing. [deiferni]
- Provide a testserver for GEVER. [jone]
- Prevent tasks from being copied. [lgraf]
- ResolveOGUIDView: Preserve query string. [lgraf]
- Bump docxcompose to 1.0.0a16 to fix updating docproperties. [deiferni]
- Resolve mail author to fullname when it is a userid. [njohner]
- Remove deprecated docprops from templates and tests. [njohner]
- Add Impersonator role and "ftw.tokenauth: Impersonate user" permission. [njohner]
- Bump ftw.structlog to get new client_ip field and referrer logging fixes. [lgraf]
- Skip sablon template validation during setup of development system. [njohner]
- Refactor solr LiveSearchReplyView to use a template. [njohner]
- Include portal_type in @favorites endpoint response. [lgraf]
- Supply date format locale settings for fr-ch. [lgraf]
- Add meeting error view displayed when user has permission issues. [njohner]
- Kill the theme functional test layer. [Rotonen]
- Kill the theme integration test layer. [Rotonen]
- Merge the plonetheme.teamraum gever profile into opengever.core. [Rotonen]
- Merge the plonetheme.teamraum default profile into opengever.core. [Rotonen]
- Merge the plonetheme.teamraum bumblebee profile to opengever.core. [Rotonen]
- Set the default publisher encoding to UTF-8 to match production in tests. [Rotonen]
- Bump ftw.testbrowser to 1.30.0 to respect content encodings in tests. [Rotonen]
- Use the correct message factory in the Oneoffixx form. [Rotonen]