@@ -13,6 +13,7 @@ Changelog
 - Avoid naming conflicts in meeting zipexport. [njohner]
 - Fix bug in meeting zip export with documents without files. [njohner]
 - Do not show closed dossiers in the move target autocomplete widget. [Rotonen]
+- Copy local roles depending on assignment cause during copy/paste. [njohner]
 - Change wording of info for inactiv close meeting button. [njohner]
 - Avoid truncating committee responsible group token while normalizing. [deiferni]
 - Provide a testserver for GEVER. [jone]
